--- a/views/Admin/students.ejs
+++ b/views/Admin/students.ejs
@@ -26,22 +26,30 @@
 
             <div class="row gy-5">
 
+                <% let x=1 %>
+
+                <% data.forEach(function(val){ %>
+
                 <div class="col-md-4">
                     <div class="tcard text-center p-4">
                         <div class="img text-center">
-                            <img src="/img/R.jpg" alt="profile_pic" height="90">
+                            <% if(val.profile){ %>
+                                <img src="/uploads/<%= val.profile %>" alt="avatar" height="90">
+                            <% }else{ %>
+                                <img src="/img/avatar.png" alt="avatar" height="90">
+                            <% } %>
                         </div>
     
-                        <p class="fw-bold mt-2 fs-5">Zayed Oyshik</p>
-                        <p class="dept">Department of CSE</p>
+                        <p class="fw-bold mt-2 fs-5"><%= val.name %></p>
+                        <p class="dept">Department of <%= val.department %></p>
                          <!-- Button trigger modal -->
                          <a href="#" type="button" class="btn cbtn-card btn-sm mt-3" data-bs-toggle="modal"
-                         data-bs-target="#exampleModal">
+                         data-bs-target="#exampleModal<%= x %>">
                          view details
                      </a>
 
                      <!-- Modal -->
-                     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                     <div class="modal fade" id="exampleModal<%= x %>" tabindex="-1" aria-labelledby="exampleModalLabel"
                          aria-hidden="true">
                          <div class="modal-dialog modal-dialog-centered">
                              <div class="modal-content">
@@ -53,17 +61,21 @@
                                  <div class="modal-body">
 
                                      <div class="img text-center">
-                                         <img src="/img/R.jpg" alt="profile_pic" height="90">
+                                        <% if(val.profile){ %>
+                                            <img src="/uploads/<%= val.profile %>" alt="avatar" height="90">
+                                        <% }else{ %>
+                                            <img src="/img/avatar.png" alt="avatar" height="90">
+                                        <% } %>
                                      </div>
          
-                                     <p class="fw-bold mt-2 fs-5">Zayed Oyshik</p>
+                                     <p class="fw-bold mt-2 fs-5"><%= val.name %></p>
                                      
                                      <div class="add-info">
-                                         <p>Username: zayed@gmail.com </p>
-                                         <p>Password: zayed@gmail.com </p>
-                                         <p>Department: CSE</p>
-                                         <p>Gender: Male </p>
-                                         <p>Contact No: 01723456789 </p>
+                                         <p>Email: <%= val.email %> </p>
+                                         <p>Password: <%= val.password %> </p>
+                                         <p>Department: <%= val.department %></p>
+                                         <p>Gender: <%= val.gender %> </p>
+                                         <p>Contact No: <%= val.contact %> </p>
                                      
                                      </div>
                                      
@@ -73,12 +85,15 @@
                                      <button type="button" class="btn btn-danger btn-sm">Delete</button>
                                  </div>
                              </div>
+                             <% x++; %>
                          </div>
                      </div>
 
     
                     </div>
                 </div>
+
+                <% }) %>
 
        
                 
