--- a/views/Teacher/teacherdashboard.ejs
+++ b/views/Teacher/teacherdashboard.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Dashboard</title>
+    <title>Teacher Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-
+    <% data.forEach(function(val){ %>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -30,18 +30,38 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 me-5">
                     <li class="nav-item">
-                        <a class="btn btn-dark btn-sm mt-2" href="#"><i class="fa-solid fa-plus me-1"></i>Join
+                        <a class="btn btn-dark btn-sm mt-2" href="#"><i class="fa-solid fa-plus me-1"></i>Create
                             Class</a>
                     </li>
 
-                    <li class="nav-item">
-                        <img class="profile-pic" src="/img/R.jpg" alt="">
+                    <li class="nav-item pro-pic">
+                        <% if(val.profile){ %>
+                            <img id="img-btn" class="profile-pic" src="/uploads/<%= val.profile %>" alt="avatar">
+                        <% }else{ %>
+                            <img id="img-btn" class="profile-pic" src="/img/avatar.png" alt="avatar">
+                        <% } %>
+
+                        <form action="/uptimg/<%= val.id %>" method="post" enctype="multipart/form-data">
+
+                            <div class="up-card text-center">
+                                <% if(val.profile){ %>
+                                    <img id="up-btn" src="/uploads/<%= val.profile %>" alt="" width="100">
+                                <% }else{ %>
+                                    <img id="up-btn" src="/img/up.png" alt="" width="100">
+                                <% } %>
+                                <br>
+                                <input id="up-btn-hide" type="file" name="profile" hidden onchange="document.getElementById('up-btn').src = window.URL.createObjectURL(this.files[0])">
+                                <button type="submit" class="btn btn-dark btn-sm mt-3">Upload</button>
+                            </div>
+
+                        </form>
+                        
                     </li>
 
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown me-5">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Rima Akter
+                            <%= val.name %>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Profile</a></li>
@@ -49,7 +69,7 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Logout</a></li>
+                            <li><a class="dropdown-item" href="/logoutT">Logout</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -142,6 +162,37 @@
         </div>
 
     </div>
+
+
+    <% }) %>
+
+    <script>
+        let img_box = document.getElementsByClassName("up-card")[0];
+        let img_btn = document.getElementById("img-btn");
+        let hidden_btn = document.getElementById("up-btn-hide");
+        let up_btn = document.getElementById("up-btn");
+
+        let img_div = document.getElementById("img-div");
+
+        up_btn.addEventListener('click',()=>{
+            hidden_btn.click();
+        });
+
+
+        let img_box_visibility=0;
+
+        img_btn.addEventListener('click',()=>{
+            if(img_box_visibility==0)
+            {
+                img_box.style.display = "block";
+                img_box_visibility=1;
+            }else{
+                img_box.style.display = "none"
+                img_box_visibility=0;
+            }
+        });
+    </script>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
