--- a/views/Teacher/tlogin.ejs
+++ b/views/Teacher/tlogin.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Dashboard</title>
+    <title>Teacher Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -27,7 +27,7 @@
 
         <p class="display-6 fs-3 text-center text-muted my-4">Teacher Login!</p>
 
-        <form action="">
+        <form action="/tlogin" method="POST">
 
         <input type="email" id="email" name="email" placeholder="Email">
         <input type="text" id="password" name="password" placeholder="Password">
