--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,8 +31,8 @@
                 Login
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                <li><a class="dropdown-item" href="/regstu">Login As Student</a></li>
-                <li><a class="dropdown-item" href="/regtec">Login As Teacher</a></li>
+                <li><a class="dropdown-item" href="/slogin">Login As Student</a></li>
+                <li><a class="dropdown-item" href="/tlogin">Login As Teacher</a></li>
             </ul>
         </div>
         <div class="dropdown ms-3">
