--- a/views/Admin/count.ejs
+++ b/views/Admin/count.ejs
@@ -30,6 +30,7 @@
                       <tr>
                         <th scope="col">Teacher</th>
                         <th scope="col">Student</th>
+                        <th scope="col">Room</th>
                         <th scope="col">Status</th>
                       </tr>
                     </thead>
@@ -39,6 +40,7 @@
                       <tr>
                         <td><%= val.teacher %></td>
                         <td><%= val.student %></td>
+                        <td><%= val.room %></td>
                         <td><%= val.status %></td>
                         
                       </tr>
