--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,38 +4,215 @@
 }
 
 body{
-    /* background-color: rgb(38, 3, 20); */
-}
-.p1{
-    color: crimson;
+    overflow-x: hidden;
 }
 
-.body-part{
-    margin-top:80px;
+body::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+
+body::-webkit-scrollbar-track {
+    background: transparent; 
+  }
+   
+
+body::-webkit-scrollbar-thumb {
+    background: linear-gradient(#002F6F,#24ADE1);
+    border-radius: 10px;
+  }
+  
+
+body::-webkit-scrollbar-thumb:hover {
+     background: linear-gradient(#002F6F,#24ADE1);
 }
 
 
-.welcome{
-    color: rgb(170, 157, 157);
+
+.top-header{
+    background-color: rgb(34, 32, 32);
+    display: flex;
+    align-items: center;
+    
 }
 
-.heading{
-    box-shadow: 0px 3px 25px rgba(202, 201, 201, 0.352);
-    background-color: white;
+.top-header ul{
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    margin-top: 10px;
 }
 
-.cbtn-1{
-    background: linear-gradient(to right,rgb(248, 4, 150),crimson);
+.top-header ul li{
+    padding: 0px 10px;
+}
+
+.top-header ul li a{
+    text-decoration: none;
+    color: rgb(165, 162, 162);
+    text-transform: capitalize;
+    white-space: nowrap;
+    font-size: 12px;
+}
+
+.top-header .social-link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
+}
+.top-header .social-link a{
+    text-decoration: none;
     color: white;
 }
-.cbtn-2{
-    background: linear-gradient(to right,rgb(156, 2, 138),rgb(220, 20, 190));
-    color: white;
+.navbar{
+    z-index:19;
+}
+.slider{
+    height: 450px;
+    width: 100%;
+    overflow: hidden;
+    background-image: url(../img/slide2.jpg);
+    background-size: 100% 700px;
+    background-position: 0px -150px;
+    filter: blur(2px);
+  -webkit-filter: blur(2px);
+}
+.slider .overlay{
+    background: linear-gradient(135deg,rgba(0, 128, 0, 0.65),rgba(2, 21, 84, 0.65));
+    height: 500px;
+    width: 100%;
+
+    
+}
+.header-section{
+    /* padding: 0px 30px; */
+    width: 100%;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 30;
+    box-shadow: 0px 3px 20px rgba(128, 128, 128, 0.454);
+   
 }
 
-.cbtn-1:hover{
+.updates .updates-bg{
+    padding: 7px;
+    background:linear-gradient(to right,#002F6F,#24ADE1);
     color: white;
 }
-.cbtn-2:hover{
-    color: white;
+.updates-bg a{
+    color: azure;
 }
+.notice-board{
+    width: 97%;
+    margin: 0 auto;
+    height: 580px;
+    border: 1px solid rgba(196, 194, 194, 0.658);
+}
+
+.section-1{
+    width: 95%;
+    margin: 0 auto;
+}
+.video-board{
+    width: 100%;
+    margin: 0 auto;
+    height: 580px;
+    border: 1px solid rgba(196, 194, 194, 0.658);
+}
+.notice-title{
+    background:linear-gradient(to right,#002F6F,#24ADE1);
+    color: white;
+    padding: 5px;
+    text-align: center;
+}
+.notice-title1{
+    color: #24ADE1;
+    padding: 5px;
+    text-align: center;
+    border: 1px solid #24ADE1;
+}
+
+.notice-item{
+    padding: 5px 15px;
+}
+.notice-item p{
+    font-size: 12px;
+    margin: 0;
+}
+.notice-item h6{
+    display: inline-block;
+    margin: 0;
+}
+.notice-item .dates{
+    text-align: right;
+}
+
+hr.notice-hr{
+    width: 90%;
+    margin: 0 auto;
+    border: 1px solid rgb(194, 192, 192);
+}
+
+.notice-board-1{
+    width: 90%;
+    height: 500px;
+    border: 1px solid rgba(196, 194, 194, 0.658);
+}
+
+.contacts{
+    background-color: rgb(19, 18, 18);
+}
+.contacts a{
+    text-decoration: none;
+    color: rgb(77, 77, 78);
+    display: block;
+    margin-top: 10px;
+}
+
+.contacts .contact-title{
+    display: inline-block;
+    font-size: 18px;
+    /* border-bottom: 1px solid rgb(58, 58, 62); */
+}
+
+.footer{
+    background-color: black;
+    text-align: center;
+}
+
+
+
+
+
+
+@media only screen and (min-width:340px) and (max-width: 767px) {
+    .top-header{
+        display: none;
+    }
+    .slider{
+        height: 230px;
+        width: 100%;
+        overflow: hidden;
+        background-image: url(../img/slide2.jpg);
+        background-size: 100% 600px;
+        background-position: 0px -150px;
+        filter: blur(2px);
+      -webkit-filter: blur(2px);
+    }
+    .slider .overlay{
+        background: linear-gradient(135deg,rgba(0, 128, 0, 0.65),rgba(2, 21, 84, 0.65));
+        height: 230px;
+        width: 100%;
+    
+        
+    }
+    .notice-board-1{
+        margin: 20px auto;
+    }
+
+
+  }
